Closed
Bug 1439155
Opened 4 years ago
Closed 4 years ago
.control:-moz-read-only matches inputs of type date and time event if not readonly
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla60
Tracking | Status | |
---|---|---|
firefox60 | --- | fixed |
People
(Reporter: davidetrisolini, Assigned: emilio)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_3) AppleWebKit/604.5.6 (KHTML, like Gecko) Version/11.0.3 Safari/604.5.6 Steps to reproduce: The CSS selector .control:-moz-read-only {border:0} matches <input type="date" class="control"> and <input type="time" class="control">, even if no readonly attribute is set on the elements.
Comment 1•4 years ago
|
||
I think the correct component is Core::CSS: parsing and Computation. Please correct if this is not the right component.
Component: Untriaged → CSS Parsing and Computation
Product: Firefox → Core
Assignee | ||
Comment 2•4 years ago
|
||
This check doesn't include date / time inputs: https://searchfox.org/mozilla-central/rev/47cb352984bac15c476dcd75f8360f902673cb98/dom/html/nsGenericHTMLElement.cpp#2088
Status: UNCONFIRMED → NEW
Component: CSS Parsing and Computation → DOM: Core & HTML
Ever confirmed: true
Flags: needinfo?(emilio)
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Comment hidden (mozreview-request) |
Assignee | ||
Comment 4•4 years ago
|
||
There's another usage of IsTextOrNumberControl in: https://searchfox.org/mozilla-central/rev/9a8d3f8191b15cdca89a7ce044c7bea2dd0462dc/dom/events/EventStateManager.cpp#1607 Do you know what the right thing to do there is Olli?
Flags: needinfo?(bugs)
Comment 5•4 years ago
|
||
(In reply to Emilio Cobos Álvarez [:emilio] from comment #4) > There's another usage of IsTextOrNumberControl in: > > > https://searchfox.org/mozilla-central/rev/ > 9a8d3f8191b15cdca89a7ce044c7bea2dd0462dc/dom/events/EventStateManager. > cpp#1607 > > Do you know what the right thing to do there is Olli? Looks like that code is used these days only in tests, as far as I see. Given that we don't currently really deal with type=date specially in contextmenus, that code could just stay as it is, for now, I guess.
Flags: needinfo?(bugs)
Comment 6•4 years ago
|
||
mozreview-review |
Comment on attachment 8952967 [details] Bug 1439155: Be consistent about what does readonly apply to. https://reviewboard.mozilla.org/r/222216/#review228308
Attachment #8952967 -
Flags: review?(bugs) → review+
Pushed by ecoal95@gmail.com: https://hg.mozilla.org/integration/autoland/rev/443f765f134a Be consistent about what does readonly apply to. r=smaug
Comment 8•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/443f765f134a
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox60:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in
before you can comment on or make changes to this bug.
Description
•