Bug 1439155: Be consistent about what does readonly apply to. r=smaug

MozReview-Commit-ID: 4NiDe7pUzGa